--- a/index.html
+++ b/index.html
@@ -265,7 +265,6 @@
             font-size: 14px;
             color: #4a90e2;
             margin-top: 5px;
-            /* font-style: italic; <- この行を削除 */
         }
         .scale-degrees-verbose {
             font-size: 14px;
@@ -289,6 +288,14 @@
                 flex-direction: column;
                 gap: 12px;
             }
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 40px;
+            padding: 20px;
+            color: #777;
+            font-size: 14px;
         }
 
     </style>
@@ -369,6 +376,10 @@
                 <span>スケール構成音</span>
             </div>
         </div>
+
+        <footer>
+            <p>&copy; 2025 とよきち</p>
+        </footer>
     </div>
 
     <script>
