--- a/index.html
+++ b/index.html
@@ -310,8 +310,10 @@
             padding-top: 20px;
         }
         
-        .version-history h3 {
+        /* h3のスタイルを共通化 */
+        .version-history h3, .notice h3 {
             color: #ccc;
+            margin-top: 0;
             margin-bottom: 10px;
         }
         
@@ -413,6 +415,7 @@
 
         <footer>
             <div class="notice">
+                <h3>注意書き</h3>
                 <p>
                     ※4弦～7弦ベース対応。<br>
                     ※レギュラー、半音下げ、1音下げ、ドロップDチューニングに対応。<br>
