--- a/index.html
+++ b/index.html
@@ -437,7 +437,9 @@
                 <ul>
                     <li><a href="https://toyokky.github.io/bass-scale/" target="_blank" rel="noopener noreferrer">ベース指板スケール表示アプリβ版</a></li>
                     <li><a href="https://toyokky.github.io/bass-codetone/" target="_blank" rel="noopener noreferrer">ベース指板コードトーン表示アプリβ版</a></li>
-                    <li><a href="https://docs.google.com/spreadsheets/d/1Ow-75I8Q4dVDVwszbXEYktXe9SGISEnOAqGMPQAntl8/edit?usp=sharing" target="_blank" rel="noopener noreferrer">フレット指板 音階表 ※Googleスプレットシート</a></li>
+                    <li><a href="https://docs.google.com/spreadsheets/d/1Ow-75I8Q4dVDVwszbXEYktXe9SGISEnOAqGMPQAntl8/edit?usp=sharing" target="_blank" rel="noopener noreferrer">ベース指板 音名配置図 ※Googleスプレットシート</a></li>
+                    <li><a href="https://toyokky.github.io/guitar-scale/" target="_blank" rel="noopener noreferrer">ギター指板スケール表示アプリβ版</a></li>
+                    <li><a href="https://toyokky.github.io/guitar-codetone/" target="_blank" rel="noopener noreferrer">ギター指板コードトーン表示アプリβ版</a></li>
                 </ul>
             </div>
             <div class="version-history">
@@ -446,10 +448,11 @@
                     <li>Ver. 0.1: 2025/07/09, β版の公開。</li>
                     <li>Ver. 0.2: 2025/07/13, スケールへメジャーブルーススケールとマイナーブルーススケールを追加。</li>
                     <li>Ver. 0.3: 2025/07/27, 度数の数え方を修正（減2度→短2度、長短系へ長短を付与。）</li>
+                    <li>Ver. 0.4: 2025/08/18, 「作成したアプリへのリンク」へ新規アプリを追加。</li>
                 </ul>
             </div>
             <br>
-            <p>ベース指板スケール表示アプリβ版 Ver. 0.3</p>
+            <p>ベース指板スケール表示アプリβ版 Ver. 0.4</p>
             <p>&copy; 2025 とよきち</p>
         </footer>
     </div>
